se cambio el color del boton flotante  en celulares

--- a/sexshop/appsexshop/static/css/pedido.css
+++ b/sexshop/appsexshop/static/css/pedido.css
@@ -241,7 +241,7 @@
   }
 
   .action-button {
-    background-color: #00000023;
+    background-color: black;
     border: none;
     border-radius: 50%;
     width: 40px;
