--- a/sexshop/appsexshop/templates/pedido.html
+++ b/sexshop/appsexshop/templates/pedido.html
@@ -251,9 +251,9 @@
 <!-- SPEED DIAL - boton flotante -->
 <div class="speed-dial" id="speedDial">
     <div class="speed-dial-actions" id="speedActions">
-        <a class="action-button" href=""><i class="fa-brands fa-whatsapp" style="color: black;"></i></a>
-        <a class="action-button" href="https://www.instagram.com/"><i class="fa-brands fa-instagram" style="color: black;"></i></a>
-        <a class="action-button" href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook-f" style="color: black;"></i></a>
+        <a class="action-button" href=""><i class="fa-brands fa-whatsapp" style="color: white;"></i></a>
+        <a class="action-button" href="https://www.instagram.com/"><i class="fa-brands fa-instagram" style="color:  white;"></i></a>
+        <a class="action-button" href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook-f" style="color:  white;"></i></a>
     </div>
     <button class="fab">
         <span class="plus">+</span>
