se puso responsive el icono de usuario

--- a/sexshop/appsexshop/static/css/LadingPage_estilos1.css
+++ b/sexshop/appsexshop/static/css/LadingPage_estilos1.css
@@ -107,6 +107,11 @@ width: 50%;
       padding: 10px; /* Menor espaciado */
       min-width: 130px;
       margin: 14%;
+      
+  }
+  
+  #ingreso{
+    margin: 13%;
   }
 
   .dropdown-menu .dropdown-item {
