--- a/sexshop/appsexshop/templates/carrito/dildos.html
+++ b/sexshop/appsexshop/templates/carrito/dildos.html
@@ -16,16 +16,23 @@
     <!-- NAVBAR SUPERIOR -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
+     
+       <a href="{% url 'Ladingpage' %}" style="color: #f5365c; cursor: pointer;" class="me-4">
+        <i class="fas fa-arrow-left"></i> 
+      </a> 
+
       <a class="navbar-brand me-2">
         <img src="{% static 'img/carrito/Copia_de_Fantasia.png' %}" class="logoPrincipal" alt="Logo" style="height: 60px; width: 95px">
       </a>
+    
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item"><a class="nav-link" style="color: #f5365c;" href={% url 'Ladingpage' %}>Inicio</a></li>
+           
               <li class="nav-item"><a class="nav-link" href={%url 'lencerias'%}>Lencerías</a></li>
               <li class="nav-item"><a class="nav-link" href={% url 'vibradores' %}>Vibradores</a></li>
               <li class="nav-item"><a class="nav-link" href={% url 'disfraces' %}>Disfraces</a></li>
