--- a/sexshop/appsexshop/templates/carrito/productos.html
+++ b/sexshop/appsexshop/templates/carrito/productos.html
@@ -18,12 +18,21 @@
 <!-- NAVBAR SUPERIOR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
+
+    
+    <a href="{% url 'Ladingpage' %}" style="color: #f5365c; cursor: pointer;" class="me-4">
+        <i class="fas fa-arrow-left"></i> 
+      </a> 
+
     <a class="navbar-brand me-2">
       <img src="{% static 'img/carrito/Copia_de_Fantasia.png' %}" class="logoPrincipal" alt="Logo" style="height: 60px; width: 95px">
     </a>
+
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
 
     <div class="collapse navbar-collapse" id="navbarNav">
 
@@ -49,7 +58,8 @@
 
       <!-- Buscador, Carrito y Usuario -->
       <div class="d-flex align-items-center">
-        <div class="search-container me-3">
+
+        <div class="search-container me-3" style="margin: 0%;">
           <input id="query" type="search" class="form-control" placeholder="Buscar producto..." autocomplete="off">
         </div>
 
@@ -72,8 +82,7 @@
          {% endif %}
          
        
-
-        <a href="{% url 'carrito' %}" class="btn btn-outline-secondary me-2">
+<a href="{% url 'carrito' %}" class="btn btn-outline-secondary me-2">
           <i class="fas fa-shopping-cart"></i> <span id="cartCount">0</span>
         </a>
      
@@ -174,5 +183,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{% static 'js/carrito/catalogo.js' %}"></script>
+
 </body>
 </html>
