--- a/sexshop/appsexshop/templates/carrito/vibradores.html
+++ b/sexshop/appsexshop/templates/carrito/vibradores.html
@@ -16,16 +16,26 @@
    <!-- NAVBAR SUPERIOR -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
+
+     <a href="{% url 'Ladingpage' %}" style="color: #f5365c; cursor: pointer;" class="me-4">
+        <i class="fas fa-arrow-left"></i> 
+      </a> 
+
     <a class="navbar-brand me-2">
       <img src="{% static 'img/carrito/Copia_de_Fantasia.png' %}" class="logoPrincipal" alt="Logo" style="height: 60px; width: 95px">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    
+
     <div class="collapse navbar-collapse" id="navbarNav">
 
+       
+
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" style="color: #f5365c;" href={% url 'Ladingpage' %}>Inicio</a></li>
+          
             <li class="nav-item"><a class="nav-link" href={%url 'lencerias'%}>Lencerías</a></li>
             <li class="nav-item"><a class="nav-link active" href={% url 'vibradores' %}>Vibradores</a></li>
             <li class="nav-item"><a class="nav-link" href={% url 'disfraces' %}>Disfraces</a></li>
@@ -59,15 +69,18 @@
              {% endif %}
          {% endif %}
 
-        <a href="{% url 'carrito' %}" class="btn btn-outline-secondary me-2">
+       <a href="{% url 'carrito' %}" class="btn btn-outline-secondary me-2">
           <i class="fas fa-shopping-cart"></i> <span id="cartCount">0</span>
         </a>
         <button class="btn btn-outline-secondary">
            <a href="{% url 'perfiles' %}" style="color: #f5365c;"><i class="fas fa-user"></i> </a>
         </button>
       </div>
+ 
     </div>
+   
   </div>
+  
 </nav>
 
 
