--- a/sexshop/appsexshop/templates/productos_subcategoria.html
+++ b/sexshop/appsexshop/templates/productos_subcategoria.html
@@ -31,25 +31,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
 
-  <!-- Categorías con Dropdown -->
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-           {% for categoria in categorias %}
-           <li class="nav-item dropdown">
-             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-               {{ categoria.NombreCategoria }}
-             </a>
-             <!-- Menú desplegable -->
-
-             <ul class="dropdown-menu dropdown-menu" id="custom-dropdown">
-               {% for subcategoria in categoria.subcategoria_set.all %}
-                 <li><a class="dropdown-item" href="{% url 'productos_por_subcategoria' subcategoria.IdSubCategoria %}"> {{ subcategoria.NombresubCategoria }}</a></li>
-               {% empty %}
-                 <li><a class="dropdown-item" href="#">No hay subcategorías</a></li>
-               {% endfor %}
-             </ul>
-           </li>
-           {% endfor %}
-         </ul>
+  
 
 
       <div class="d-flex align-items-center ms-auto">
@@ -88,7 +70,7 @@
   </div>
 </nav>
 
-    <h4 class="titulosLading" style="color:#f5365c; text-align:center;"><hr> ✰ Productos en {{ subcategoria.NombresubCategoria }} ✰<p style="font-size: 14px; color: #000000;">¡Donde el placer Comienza!</p><hr></h4>
+    <h4 class="titulosLading" style="color:#f5365c; text-align:center;"><hr> ✰ Explora tu deseo, Categoria por categoria ✰<hr></h4>
 
 
 
