se agrego titulo en vista productos filtrados

--- a/sexshop/appsexshop/templates/productos_subcategoria.html
+++ b/sexshop/appsexshop/templates/productos_subcategoria.html
@@ -70,7 +70,7 @@
   </div>
 </nav>
 
-    <h4 class="titulosLading" style="color:#f5365c; text-align:center;"><hr> ✰ Explora tu deseo, Categoria por categoria ✰<hr></h4>
+    <h4 class="titulosLading" style="color:#f5365c;  text-align:center; "><hr> ✰ Productos en {{ subcategoria.NombresubCategoria }} ✰<p style="font-size: 14px; color: #000000;">¡Descubre tu placer!</p><hr></h4>
 
 
 
